--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "psr/log": ">=1.1",
-    "m2mobi/apns-php": "~4.0.0rc2",
-    "phpmailer/phpmailer": "~6.4",
+    "psr/log": ">=3.0",
+    "m2mobi/apns-php": "~4.0",
+    "phpmailer/phpmailer": "~6.4|~7.0",
     "rmccue/requests": "~2.0",
     "php": ">=8.3",
     "ext-xml": "*"
